--- a/client/macaronshop/angular.json
+++ b/client/macaronshop/angular.json
@@ -28,7 +28,8 @@
                 "glob": "**/*",
                 "input": "public"
               },
-              "src/assets"
+              "src/assets",
+              "resources/static"
             ],
             "styles": [
               "src/styles.scss"
